Fix security configs