@@ -1,7 +1,5 @@
 package com.sda.carrental.configs;
 
-import com.mysql.cj.protocol.AuthenticationProvider;
-import com.sda.carrental.models.enums.UserRole;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -16,6 +14,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -27,21 +26,7 @@ public class SecurityConfigs {
         http.cors().and()
                 .csrf().disable()
                 .authorizeHttpRequests()
-                .requestMatchers(HttpMethod.GET, "/api/branches/**").permitAll()
-                .requestMatchers(HttpMethod.PUT, "/api/branches/**").hasRole(UserRole.ADMIN.name())
-                .requestMatchers(HttpMethod.DELETE, "/api/branches/**").hasRole(UserRole.ADMIN.name())
-                .requestMatchers(HttpMethod.POST, "/api/branches/**").hasRole(UserRole.ADMIN.name())
-                .requestMatchers(HttpMethod.GET, "/api/cars/**").permitAll()
-                .requestMatchers(HttpMethod.PUT, "/api/cars/**").hasRole(UserRole.ADMIN.name())
-                .requestMatchers(HttpMethod.DELETE, "/api/cars/**").hasRole(UserRole.ADMIN.name())
-                .requestMatchers(HttpMethod.POST, "/api/cars/**").hasRole(UserRole.ADMIN.name())
-                .requestMatchers(HttpMethod.GET, "/api/rentals/**").permitAll()
-                .requestMatchers(HttpMethod.PUT, "/api/rentals/**").hasRole(UserRole.ADMIN.name())
-                .requestMatchers(HttpMethod.DELETE, "/api/rentals/**").hasRole(UserRole.ADMIN.name())
-                .requestMatchers(HttpMethod.GET, "/customers/**").hasRole(UserRole.USER.name())
-                .requestMatchers(HttpMethod.PUT, "/customers/**").hasRole(UserRole.USER.name())
-                .requestMatchers(HttpMethod.DELETE, "/customers/**").hasRole(UserRole.USER.name())
-                .requestMatchers(HttpMethod.POST, "/customers/**").hasRole(UserRole.USER.name())
+                .requestMatchers(HttpMethod.GET, "/api/**").permitAll()
                 .requestMatchers("/**", "/h2-console**").permitAll()
                 .anyRequest()
                 .authenticated()
@@ -58,8 +43,8 @@ public class SecurityConfigs {
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("*"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedOrigins(List.of("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowedMethods(Arrays.asList("GET", "PUT", "POST", "DELETE", "OPTIONS"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
